# NebulaMind

./: .gitignore  AGENT_GUIDE.md  DESIGN_GUIDE.md  EXPLORE_DESIGN.md  LICENSE  README.md  RESEARCH_FRONTIER_DESIGN.md  WIKI_V2_DESIGN.md  docker-compose.yml  wiki_schema.md
backend/: .env.example  Makefile  alembic.ini  apply_renovation.py  bookkeeper.py  celerybeat-schedule.db  commit_renovation.py  count_arxiv_papers.py  find_all_claims_including_multi.py  fix_db_claim_assignment.py  fix_edit_model.py  fix_models.py  mine_targeted_ads.py  pyproject.toml  run_manual_rewrite.py  run_targeted_rewrite_loop.py  seed.py  test_frontend_regex.js  trigger_watchdog.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  levels.py  main.py
backend/autowiki/: program.default.md
backend/config/: arxiv_retrieval_taxonomy.v1.yaml  page_retrieval_calibration.galaxy-evolution.v2.yaml
backend/data/: seed_surveys.json  seminal_claims.yaml
backend/docs/: coherence_evaluation_v1.md
backend/scripts/: add_claims_low_health.py  align_citations.py  arxiv_wiki_feed_build_candidates.py  arxiv_wiki_feed_common.py  arxiv_wiki_feed_promote.py  arxiv_wiki_feed_report.py  arxiv_wiki_feed_retrieval_filter_v1_dryrun.py  arxiv_wiki_feed_v2_atomize.py  arxiv_wiki_feed_v2_phase3_promote.py  arxiv_wiki_feed_v2_retrieval_filter.py  arxiv_wiki_feed_v2_validate_elements.py  arxiv_wiki_feed_validate.py  astrosage_galev_boost.py  astrosage_galev_content.py  astrosage_reno_batch.py  astrosage_restored_pages_boost.py  astrosage_restored_pages_boost_pass2.py  atom_score_evidence.py  (+115 more)
(+867 files in other folders)
