[project]
name = "nebulamind-backend"
version = "0.1.0"
description = "NebulaMind — astronomy wiki backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "celery[redis]>=5.3,<6",
    "pydantic-settings>=2.2,<3",
    "python-slugify>=8,<9",
    "feedparser>=6.0,<7",
    "rapidfuzz>=3.0,<4",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<1",
    "requests>=2.32,<3",
    "slowapi>=0.1.9,<1",
    "email-validator>=2.1,<3",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
